2007-05-04  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\tocreadfilename): allow override of
	\jobname.toc for sake of 2-volume printed lispref.
	(\finishentry): change test for no page number (and hence no
	leaders) again, for "Volume N" in lispref.
	(\smallbook): adjust margins to be more equal.

2007-05-03  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\urlcolor, \linkcolor): define both as \BrickRed
	by default.

2007-04-29  Werner Koch  <wk@g10code.com>

	* makeinfo/html.c (process_css_file): Don't omit copying the i
	of @import.  (Reported on 27 Sep 06.)
	
2007-04-29  Karl Berry  <karl@gnu.org>

	* system.h [__CYGWIN__]: #define STRIP_DOT_EXE 0 (since gunzip.exe
	may no longer exist), and PIPE_USE_FORK as 1.
	From Christopher Faylor, 28 Apr 2007 20:25:56.

	* makeinfo/cmds.c (cm_strong): doc fix.

	* makeinfo/makeinfo.h (paragraph_buffer_len): move decl here ...
	* makeinfo/makeinfo.c (paragraph_buffer_len): from here.
	* makeinfo/multi.c (select_output_environment): save and restore
	paragraph_buffer_len.  Otherwise, an exceptionally long multitable
	entry (gcal.texi) might realloc output_paragraph, thus increasing
	paragraph_buffer_len, and then we get back to the main text and
	restore the old output_paragraph, we'll be out of sync.  Yikes.
	(Thank you to Electric Fence and valgrind.)

2007-04-26  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (cmapOT1, cmapOT1IT, cmapOT1TT): new definitions
	for pdf so that searching and copying from pdf documents will find
	text properly, e.g., the "fi" in "file".  From Oleg.  Report from
	Frank K on tex-live.

	* util/gendocs_template: conform to new GNU style.  From Yavor.
	* util/gendocs_template_min: previous version, without SSI.

2007-04-21  Karl Berry  <karl@gnu.org>

	* system.h (DMALLOC_FUNC_CHECK) [DMALLOC_DEBUG]: #define.

2007-04-17  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi: findex set and clear.
	From Kevin Ryde, 16 Apr 2007 11:15:00.

2007-04-12  Karl Berry  <karl@gnu.org>
